Import of MERIXZON/WWW-Google-Contacts-0.11 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.11
gitpan-cpan-path:         MERIXZON/WWW-Google-Contacts-0.11.tar.gz
gitpan-cpan-author:       MERIXZON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WWW-Google-Contacts
 
+0.11    2010.09.01
+        Hiding didn't do what I expected :-/
+
 0.10    2010.09.01
         Bugfix - contact id lost when searching
 	Hide a bunch of modules from pause
