Import of MERIXZON/WWW-Google-Contacts-0.12 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.12
gitpan-cpan-path:         MERIXZON/WWW-Google-Contacts-0.12.tar.gz
gitpan-cpan-author:       MERIXZON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WWW-Google-Contacts
 
+0.12    2010.09.06
+	Update prereqs - Need MooseX::Singleton version 0.25
+	
 0.11    2010.09.01
         Hiding didn't do what I expected :-/
 
