Import of MERIXZON/WWW-Google-Contacts-0.15 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.15
gitpan-cpan-path:         MERIXZON/WWW-Google-Contacts-0.15.tar.gz
gitpan-cpan-author:       MERIXZON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WWW-Google-Contacts
 
+0.15    2010.10.13
+	Bugfix, support custom types for phone numbers. Thanks to Eric Poulsen for reporting
+
 0.14    2010.10.06
 	Bugfix, some code was still trying to call Server->instance. Bug reported and fixed by Andrew Sterling Hanenkamp
 	
