--- a/README
+++ b/README
@@ -187,7 +187,7 @@ ACKNOWLEDGEMENTS
 TODO
     More POD
     Unit tests. Very lame right now
-    Complete link between contact - group
+    Complete link between contact - group. halfway there
     Images
     Fix bugs :)
 
