Import of MERIXZON/WWW-Google-Contacts-0.20 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.20
gitpan-cpan-path:         MERIXZON/WWW-Google-Contacts-0.20.tar.gz
gitpan-cpan-author:       MERIXZON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WWW-Google-Contacts
 
+0.20    2010.11.29
+	Bug fixes around contact events. Thanks to Oliver Enzmann for bug report
+	
 0.19	2010.11.24
 	A slight improvement in Contact -> Group membership handing
 
