Import of MERIXZON/WWW-Google-Contacts-0.21 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.21
gitpan-cpan-path:         MERIXZON/WWW-Google-Contacts-0.21.tar.gz
gitpan-cpan-author:       MERIXZON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WWW-Google-Contacts
 
+0.21	2010.12.02
+	POD updates
+	
 0.20    2010.11.29
 	Bug fixes around contact events. Thanks to Oliver Enzmann for bug report
 	
