Import of MERIXZON/WWW-Google-Contacts-0.24 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.24
gitpan-cpan-path:         MERIXZON/WWW-Google-Contacts-0.24.tar.gz
gitpan-cpan-author:       MERIXZON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for WWW-Google-Contacts
 
+0.24    2010.12.15
+	If type is set to '', use default value
+	Require at least version 1.09 of Class::MOP
+	
 0.23	2010.12.12
 	Set default types in the type definitions
 	Minor bug fixes
