Import of MERIXZON/WWW-Google-Contacts-0.26 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.26
gitpan-cpan-path:         MERIXZON/WWW-Google-Contacts-0.26.tar.gz
gitpan-cpan-author:       MERIXZON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WWW-Google-Contacts
 
+0.26	2011.02.01
+	Bugfix, some times it would fail to update contact due to 'link' getting included in the xml
+
 0.25    2010.12.20
 	While my flights out of London are being cancelled..
 	Minor updates to contact->group interaction
