--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WWW-Google-Contacts
 
+0.31	2011.07.09
+	More Contact attribute tests
+
 0.30	2011.06.29
 	Bugfix, country can have both name and/or code.
 
