--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WWW-Google-Contacts
 
+0.32	2011.08.03
+	Bugfix for organization/where
+
 0.31	2011.07.09
 	More Contact attribute tests
 
