Import of MERIXZON/WWW-Google-Contacts-0.34 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.34
gitpan-cpan-path:         MERIXZON/WWW-Google-Contacts-0.34.tar.gz
gitpan-cpan-author:       MERIXZON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WWW-Google-Contacts
 
+0.34    2012.04.05
+        Handle names with Yomi values. Thanks to Andreas Mielke for reporting
+
 0.33    2011.10.27
 	Create useful error message on coercion failure
 	Bugfix for language. Thanks to Kirby James for reporting
