--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WWW-Google-Contacts
 
+0.36    2013.04.01
+        Allow using protocol https. Thanks to Jarrod Makin for suggesting
+
 0.35    2012.08.03
         Handle Yomi values for full names. Thanks to Masanori Hara for reporting
         Ensure we handle all relationship types. Thanks to Rhesa Rozendaal for reporting
