Import of MERIXZON/WWW-Google-Contacts-0.37 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.37
gitpan-cpan-path:         MERIXZON/WWW-Google-Contacts-0.37.tar.gz
gitpan-cpan-author:       MERIXZON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WWW-Google-Contacts
 
+0.37    2013.09.04
+        Fix utf8 handling [RT#88339]. Thanks to Daniel for reporting
+
 0.36    2013.04.01
         Allow using protocol https. Thanks to Jarrod Makin for suggesting
 
