Import of MERIXZON/WWW-Google-Contacts-0.38 from CPAN.
gitpan-cpan-distribution: WWW-Google-Contacts
gitpan-cpan-version:      0.38
gitpan-cpan-path:         MERIXZON/WWW-Google-Contacts-0.38.tar.gz
gitpan-cpan-author:       MERIXZON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WWW-Google-Contacts
 
+0.38	2013.11.25
+	Bit of documentation for how to deal with photos
+
 0.37    2013.09.04
         Fix utf8 handling [RT#88339]. Thanks to Daniel for reporting
 
